hydroflow/tests/compile-fail/surface_lattice_reduce_wronggeneric.stderr
error: `lattice_reduce` should have exactly 0 generic type arguments, actually has 1.
 --> tests/compile-fail/surface_lattice_reduce_wronggeneric.rs:6:33
  |
6 |             -> lattice_reduce::<'static, hydroflow::lattices::set_union::SetUnionHashSet<u32>>()
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
